# building-lod2-builder-heat

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
src/building_lod2_builder_heat/: bounds.py  dsm.py  las.py  main.py  obj.py  ortho.py  outline.py  parameter.py
src/building_lod2_builder_heat/commands/extract_roofline/: bounds.py  dsm.py  file_names.py  main.py  main_unit.py  obj.py  ortho.py  outline.py  parameter.py  parameter_keys.py
src/building_lod2_builder_heat/commands/infer/: dsm.py  main.py  obj.py  ortho.py  parameter.py
src/building_lod2_builder_heat/common/: file_names.py  logging.py  parameter.py  parameter_keys.py
test_data/answers/dsm/: bldg_0540cdee-6d69-4f85-a741-5a9fc6dd212d.json  parameters.json
test_data/answers/dsm_downsample/: bldg_0540cdee-6d69-4f85-a741-5a9fc6dd212d.json  parameters.json
test_data/answers/dsm_obj/: bldg_0540cdee-6d69-4f85-a741-5a9fc6dd212d.json  parameters.json
test_data/answers/dsm_ortho/: bldg_0540cdee-6d69-4f85-a741-5a9fc6dd212d.json  parameters.json
test_data/answers/dsm_ortho_obj/: bldg_0540cdee-6d69-4f85-a741-5a9fc6dd212d.json  parameters.json
test_data/answers/others/: extract_roofline.json
test_data/answers/others_downsample/: extract_roofline.json
test_data/answers/others_ortho/: extract_roofline.json
test_data/answers/simple/: extract_roofline.json
test_data/input/dsm/: dsm.las  parameters.json
test_data/input/dsm_downsample/: dsm.las
test_data/input/dsm_ortho_obj/: ortho.tif
test_data/ortho_clipped/: bldg_0540cdee-6d69-4f85-a741-5a9fc6dd212d.tif
tests/: test_main.py
