[project]
name = "building_lod2_builder_heat"
version = "0.1.0"
description = ""
authors = [
    {name = "fukuchidaisuke",email = "fukuchidaisuke@realglobe.jp"}
]
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.13,<3.15"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "typer[all] (>=0.21.1,<0.22.0)",
    # 詳細は下で
    "heat",
    "torch",
    "torchvision",
]


[project.urls]
"torch-stable" = "https://download.pytorch.org/whl/torch_stable.html"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
extract-roofline = "building_lod2_builder_heat.commands.extract_roofline.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
pytest = "^9.0.2"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]

[tool.ruff.lint]
select = ["TID"]
#ignore = ["E501"]
[tool.ruff.lint.flake8-tidy-imports]
# 全ての相対インポートを禁止して検出
ban-relative-imports = "all"

# CUDA 13.0対応
[[tool.poetry.source]]
name = "pytorch_cu130"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"

[tool.poetry.dependencies]
heat = { git = "https://github.com/realglobe-Inc/heat.git", branch = "2025-dev" }
torch = { version = ">=2.10.0", source = "pytorch_cu130" }
torchvision = { version = ">=0.25.0", source = "pytorch_cu130" }
