[project]
name = "building_lod2_builder_heat"
version = "0.1.0"
description = ""
authors = [
    { name = "fukuchidaisuke", email = "fukuchidaisuke@realglobe.jp" }
]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.13,<3.15"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "typer[all] (>=0.21.1,<0.22.0)",
    # 詳細は下で
    "heat",
    "torch (>=2.10.0,<3.0.0)",
    "torchvision (>=0.25.0,<0.26.0)",
]


[project.urls]
"torch-stable" = "https://download.pytorch.org/whl/torch_stable.html"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
extract-roofline = "building_lod2_builder_heat.commands.extract_roofline.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
ruff = "^0.14.14"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "SIM", "UP", "N", "TID"]
ignore = []

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# CUDA 13.0対応
[[tool.poetry.source]]
name = "pytorch_cu130"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"

[tool.poetry.dependencies]
heat = { git = "https://github.com/realglobe-Inc/heat.git", branch = "2025-dev" }
torch = { version = "^2.10.0", source = "pytorch_cu130" }
torchvision = { version = "^0.25.0", source = "pytorch_cu130" }
